syntax = "proto3";
import "models/job-status.proto";
package services;

message ApplyJobOfferRequest {
    string offer_id = 1;
    string worker_id = 2;
}

message ApplyJobOfferResponse {
    string id = 1;
}

message GetJobOffersStatusRequest {
    string worker_id = 1;
}

message GetJobOffersStatusResponse {
   repeated models.JobOfferStatus job_offers = 1;
}